<resources>
    <string name="app_name">Social App</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>
    <string name="registrar">Registrar</string>
    <string name="entrar">Entrar</string>

    <!-- Layout Detalhado -->
    <string name="autor">Autor</string>
    <string name="conteudo_do_post">Conteúdo do post</string>
    <string name="descricao_imagem_post">Imagem do post</string>
    <string name="descricao_mais_opcoes">Mais opções</string>
    <string name="comentarios">0 comentários</string>
    <string name="curtidas">0 curtidas</string>
    <string name="favoritos">0 favoritos</string>

    <!-- Mensagens -->
    <string name="confirmar_exclusao">Tem certeza que deseja excluir este post?</string>
    <string name="excluir">Excluir</string>
    <string name="cancelar">Cancelar</string>
    <string name="excluido_sucesso">Post excluído com sucesso!</string>
    <string name="erro_excluir">Erro ao excluir o post.</string>

    <string name="nav_home">Início</string>
    <string name="nav_search">Buscar</string>
    <string name="nav_users">Amigos</string>
    <string name="nav_notifications">Notificações</string>
    <string name="friends_list">Lista de amigos</string>

    <string name="lista_de_posts">Lista de posts</string>
    <string name="novo_post_desc">Criar novo post</string>
    <string name="tab_navigation_desc">Navegação por abas</string>
    <string name="trends_list_desc">Lista de tendências</string>

    <string name="search_hint">Buscar</string>
    <string name="fab_compose_desc">Criar novo post</string>
    <string name="action_logout">Sair da conta</string>
    <string name="user_avatar">Avatar do usuário</string>
    <string name="menu_options">Mais opções</string>

    <string name="comentar">Comentar</string>
    <string name="curtir">Curtir</string>
    <string name="favoritar">Favoritar</string>
    <string name="search_results_list">Lista de resultados da busca</string>

</resources>